# neuro-news

./: .gitignore  README.md  feeds.json  mega-feeds.json  pyproject.toml  requirements.txt
neuro_news/: chat.py  cli.py  config.py  db.py  ingest.py  search.py  streams.py  ui.py  utils.py
neuro_news.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
neuro_news/providers/: anthropic.py  base.py  openai.py  openrouter.py  registry.py
tests/: test_dedup.py  test_search.py
